project(RTKLIB)
cmake_minimum_required(VERSION 3.17)
enable_language(C)
set(CMAKE_C_STANDARD 90)

SET(RTKLIB_NFREQ 5 CACHE STRING "Set the number of frequencies to use")
SET(RTKLIB_NEXOBS 3 CACHE STRING "Set the number of extra observations to use")

OPTION(RTKLIB_TRACE "Enable TRACING" ON)
OPTION(RTKLIB_ENAGAL "Enable Galileo Support" ON)
OPTION(RTKLIB_ENAGLO "Enable GLONASS Support" ON)
OPTION(RTKLIB_ENAQZS "Enable QZSS Support" ON)
OPTION(RTKLIB_ENACMP "Enable BeiDou Support" ON)
OPTION(RTKLIB_ENAIRN "Enable Navic Support" ON)

SET(RTKLIB_BINDIR "bin" CACHE STRING "Set the binary install dir")

SET(RTKLIB_DEFINES "")
LIST(APPEND RTKLIB_DEFINES "NFREQ=${RTKLIB_NFREQ}")
LIST(APPEND RTKLIB_DEFINES "NEXOBS=${RTKLIB_NEXOBS}")
if(RTKLIB_ENAGAL)
    LIST(APPEND RTKLIB_DEFINES "ENAGAL")
endif()
if(RTKLIB_ENAGLO)
    LIST(APPEND RTKLIB_DEFINES "ENAGLO")
endif()
if(RTKLIB_ENAQZS)
    LIST(APPEND RTKLIB_DEFINES "ENAQZS")
endif()
if(RTKLIB_ENACMP)
    LIST(APPEND RTKLIB_DEFINES "ENACMP")
endif()
if(RTKLIB_ENAIRN)
    LIST(APPEND RTKLIB_DEFINES "ENAIRN")
endif()

find_package(Threads REQUIRED)

add_subdirectory(src)
add_subdirectory(app)

